# Python_DEMO_web

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.md  pyproject.toml
app/: auth.py  database.py  main.py
app/static/: style.css  styles.css
app/templates/: about.html  add_user.html  base.html  change_password.html  commercial_stack.html  database.html  form.html  form_result.html  index.html  login.html  methods.html  methods_get_result.html  methods_post_result.html  protected.html  register.html  search.html  summary.html  user_detail.html
docs/project_notes/: OVERVIEW.md  bugs.md  decisions.md  issues.md  key_facts.md  research.md
docs/project_notes/decisions/: 2026-06-16-create-fastapi-teaching-site.md
openspec/changes/create-fastapi-teaching-site/: .openspec.yaml  design.md  proposal.md  review-report.md  tasks.md  verification-report.md
openspec/changes/create-fastapi-teaching-site/specs/teaching-site/: spec.md
python_demo_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_main.py  test_skeleton.py  test_teaching_routes.py  test_users.py
